# XMorphy

./: .clang-format  .gitattributes  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  FindTinyXML2.cmake  LICENSE  README.md  main.cpp  setup.py
.github/workflows/: main.yml
DAWG/: .Dictionary.h.swp  BuildFactory.h  Dictionary.h  ISerializable.h
DAWG/dawgdic/: dictionary.h
IO/: IIO.h  OpCorporaIO.cpp  OpCorporaIO.h  UniDepIO.cpp  UniDepIO.h
base/: IAnalyzer.h  IEntity.h  ISynthesizer.h
cmake/: icu.cmake
contrib/: CMakeLists.txt
contrib/boost-cmake/: CMakeLists.txt
contrib/boost/any/test/: appveyor.yml
contrib/boost/array/.github/workflows/: ci.yml
contrib/boost/assert/.github/workflows/: ci.yml
contrib/boost/bimap/.github/workflows/: ci.yml
contrib/boost/bind/.github/workflows/: ci.yml
contrib/boost/bind/include/boost/bind/: bind.hpp
contrib/boost/container_hash/: .appveyor.yml  .drone.jsonnet
contrib/boost/container_hash/.drone/: drone.sh
contrib/boost/container_hash/.github/workflows/: ci.yml
contrib/boost/container_hash/doc/hash/: recent.adoc  reference.adoc
contrib/boost/container_hash/include/boost/container_hash/: hash.hpp
contrib/boost/container_hash/include/boost/container_hash/detail/: hash_range.hpp
contrib/boost/container_hash/test/: Jamfile.v2
contrib/boost/detail/.github/workflows/: ci.yml
contrib/boost/function/.github/workflows/: ci.yml
contrib/boost/function/test/cmake_subdir_test/: CMakeLists.txt
contrib/boost/integer/.github/workflows/: ci.yml
contrib/boost/lexical_cast/.github/workflows/: ci.yml
contrib/boost/move/include/boost/move/: utility_core.hpp
contrib/boost/move/include/boost/move/detail/: workaround.hpp
contrib/boost/static_assert/.github/workflows/: ci.yml
contrib/boost/throw_exception/.github/workflows/: ci.yml
contrib/boost/tuple/include/boost/tuple/detail/: tuple_basic.hpp
contrib/boost/type_index/.github/workflows/: ci.yml
contrib/boost/type_index/test/: appveyor.yml
contrib/cmake/: Eigen3Config.cmake  FunctionalPlusConfig.cmake  nlohmann_jsonConfig.cmake
contrib/icu-cmake/: CMakeLists.txt
data/: greenlamp.txt
data/dicts/: hyphdict.txt  prefixdict.txt  realdisambdict_x
data/models/: disamb_50.json  disamb_layer_3_pooled_3.json  disamb_layer_3_pooled_5.json  disamb_layer_3_pooled_7.json  disamb_layer_3_pooled_9.json  disamb_model.json  disamb_model_50.json  disamb_syntagrus2.json  disamb_tflite_model1628185222_new.tflite  disamb_tflite_model1628185769_new_5.tflite  disamb_tflite_model1628253672_new_3.tflite  disamb_tiny_model_3.json  disamb_tiny_model_5.json  disamb_tiny_model_7.json  joined_tflite_model1628348661_new_9_20.tflite  joined_tflite_model1628426746_new_7_20.tflite  joined_tflite_model1628432800_new_5_20.tflite  joined_tflite_model1628434895_new_3_20.tflite  joined_tflite_model1628438339_new_5_12.tflite  joined_tflite_model1628439989_new_7_12.tflite  joined_tflite_model1628441900_new_7_6.tflite  joined_tflite_model1628443261_new_5_6.tflite  joined_tflite_model1628505134_new_9_12.tflite  joined_tflite_model1628506970_new_9_6.tflite  joined_tflite_model1628685196_new_12_20.tflite  morphem_lexeme_model.json  morphem_model_12.json  morphem_model_20.json  morphem_model_7.json  morphem_tflite_model1628181015_new.tflite  morphem_tflite_model1628183806_new.tflite  morphem_tflite_model1628184531_new.tflite  phemmodel  test_tflite_model.tflite  test_tflite_model1628179154_new.tflite
data/morphem/: cross_lexica.txt  tikhonov20.test
data/rawdicts/: dict.opcorpora.conv.txt  fixed_ud_parts.json
dicts/: hyph_dict.txt  phemdict_f  phemdict_m  prefix_dict  real_affixes_x.txt  realsuffixdict_x
disamb/: ContextDisambiguate.h  IDisambig.h  SingleWordDisambiguate.h
graphem/: Token.cpp  Token.h  Tokenizer.h
ml/: CRF.h  CaseCrfClassifier.cpp  CaseCrfClassifier.h  GenderClassifier.h  ITrainGenerator.cpp  ITrainGenerator.h  NormalFormCrfClassifier.h  NumberClassifier.h  PhemClassifier.cpp  PhemClassifier.h  SpeechPartCrfClassifier.h
models/: disamb_tiny_model.json
morph/: DictMorphAnalyzer.h  HyphenAnalyzer.h  IMorphAnalyzer.h  PrefixAnalyzer.cpp  Processor.cpp  Processor.h  SuffixDictAnalyzer.cpp  SuffixDictAnalyzer.h  WordForm.cpp  WordForm.h
phem/: Phemmer.h
programs/cli/: main.cpp
programs/dictbuilder/: main.cpp
programs/dictconverter/: OpCorporaUDConverter.cpp  OpCorporaUDConverter.h  XMLDictLoader.cpp  XMLDictLoader.h  main.cpp
programs/janitor/: main.cpp
programs/lexeme/: main.cpp
programs/model_test/: main.cpp
programs/morphemmer/: main.cpp
programs/multiplier/: main.cpp
programs/perf/: main.cpp
python/: CMakeLists.txt  xmoprhy.cpp  xmorphy.cpp
scripts/: corpus_mixer.py  corpus_to_text.py  disamb_model.py  joined_model.py  keras_model.py  labeled_syntagrus.test  labeled_syntagrus.train  morph_model.py  morph_model_for_joined.py  opencorpora_from_xml_to_tsv.py  opencorpora_from_xml_to_tsv_dict.py  split_by_lemma.py
scripts/rules/: .gitignore  adj_utils.py  classes.json  classes_converter.py  classes_labeled.json  classes_non_nested_infl.json  classes_non_nested_infl_gerund.json  classes_non_nested_infl_gerund_short_adj.json  classes_utf_8_labeled.txt  lexeme_mixer.py  lexemes_with_short_adjectives_lemma_group.test  lexemes_with_short_adjectives_lexeme_group.test  lexemes_with_short_adjectives_lexeme_group.train  lexemes_with_short_adjectives_lexeme_group.val  morph_model.py  morpheme_utils.py  noun_utils.py  rules_splitter_generator.py  verb_utils.py
src/DAWG/: Dictionary.h
src/IO/: IIO.h  OpCorporaIO.cpp  OpCorporaIO.h  UniDepIO.cpp  UniDepIO.h
src/deprecated/: CRF.h  (+13 more)
tag/: AnalyzerTag.cpp  AnalyzerTag.h  GraphemTag.cpp  ITag.cpp  ITag.h  ITagConverter.h  MorphTag.h  OpCorporaRusCorporaConverter.cpp  OpCorporaUDConverter.cpp  OpCorporaUDConverter.h  RusCorpMorphTag.h  RusCorpSPTag.h  SpeechPartTag.cpp  SpeechPartTag.h  TokenTypeTag.cpp  UniMorphTag.h  UniSPTag.h
tests/: gtest_dictanalyzer.cpp  gtest_synthesis.cpp  gtest_tokenizer.cpp  gtest_unistring.cpp
utils/: Inotify.cpp  Inotify.h  Misc.cpp  UniCharacter.h  UniString.h
(+169 files in other folders)
